--- a/src/glog/logging.h.in
+++ b/src/glog/logging.h.in
@@ -330,6 +330,10 @@ typedef unsigned __int64 uint64;
   using fLS::FLAGS_##name
 #endif
 
+DECLARE_int32(logfile_save_days);
+
+DECLARE_string(logfile_suffix);
+
 // Set whether log messages go to stderr instead of logfiles
 DECLARE_bool(logtostderr);
 
